--- a/src/profile.css
+++ b/src/profile.css
@@ -183,7 +183,7 @@
     margin-top: 4vh;
     text-transform: uppercase;
 }
-.name-pet{
+.name-transform{
     text-transform:capitalize;
 }
 .vaccine{
