Fixed lgu bugs and addsome firebase api to it

--- a/src/profile.css
+++ b/src/profile.css
@@ -176,6 +176,9 @@
 .marginTop{
     margin-top: 10vh;
 }
+.marginLeft{
+    margin-left: 20vw;
+}
 .petName{
     color: white;
     font-size: 5vw;
