Fixed bugs in owner, seller, lgu, pets profile

--- a/src/component/LGU Announcement/LguAnnouncement.css
+++ b/src/component/LGU Announcement/LguAnnouncement.css
@@ -52,3 +52,11 @@
 .customer-info{
     margin-top: 4vh;
 }
+.announceDelete{
+    border-radius: 10%;
+    background-color: red;
+    border: none;
+    font-weight: bolder;
+    color: white;
+    padding: 2%;
+}
