--- a/src/profile.css
+++ b/src/profile.css
@@ -202,6 +202,14 @@
     margin-top: 4vh;
     text-transform: uppercase;
 }
+.petOwner{
+    color: white;
+    font-size: 3vh;
+    font-weight: bolder;
+    /* margin-top: 4vh; */
+    margin-right: 2%;
+    text-transform: uppercase;
+}
 .name-transform{
     text-transform:capitalize;
 }
@@ -282,4 +290,35 @@
 }
 .marginBottom{
     margin-bottom: 4vh;
+}
+.tLeft{
+   text-align: center;
+}
+.lineBot{
+    border-bottom: black solid 2px;
+}
+.bodyBottom{
+    margin-bottom: 5vh;
+}
+.tPad{
+    padding: 50%;
+}
+.headerBorder{
+    border-bottom: black solid 2px;
+    border-top: black solid 2px;
+}
+.circle-icon {
+    border-radius: 50%;
+    color: white;
+    margin-right: 5%;
+    padding: 5%;
+    width: 20px; 
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+.circle-icon:hover{
+    cursor: pointer;
+    background-color: #ff964f !important;
 }
